Task 013: Fixing tests

--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="src/main/webapp/WEB-INF/resources/SpamFilter/SpamFilter.jar"/>
+	<classpathentry exported="true" kind="lib" path="src/main/webapp/WEB-INF/resources/SpamFilter/SpamFilter.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" output="target/classes" path="src/main/java">
 		<attributes>
 			<attribute name="optional" value="true"/>
